Use shell instead of bash

--- a/host-proxy/Dockerfile
+++ b/host-proxy/Dockerfile
@@ -1,7 +1,6 @@
 FROM nginx:1.18-alpine
 ENV HOST_SYS linux
 ENV PORT_FORWARD_LIST ""
-RUN apk add --no-cache bash
 WORKDIR /app
 COPY start_proxy.sh stream.conf.template ./
-CMD bash start_proxy.sh
+CMD sh start_proxy.sh
