--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,7 @@ jobs:
           file: mysql-lite/Dockerfile.5
           platforms: linux/amd64
           push: true
-          tags: tsingjyujing/host-proxy:latest
+          tags: tsingjyujing/mysql-lite:latest
       -
         name: Build and push (MySQL v8)
         uses: docker/build-push-action@v2
@@ -49,4 +49,4 @@ jobs:
           file: mysql-lite/Dockerfile.8
           platforms: linux/amd64
           push: true
-          tags: tsingjyujing/host-proxy:latest 
+          tags: tsingjyujing/mysql-lite:latest 
