--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,3 +50,12 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: tsingjyujing/mysql-lite:latest 
+      -
+        name: Build and push (SSH NO PASS)
+        uses: docker/build-push-action@v2
+        with:
+          context: ssh-no-pass
+          file: ssh-no-pass/Dockerfile 
+          platforms: linux/amd64,linux/arm64,linux/386
+          push: true
+          tags: tsingjyujing/ssh-np:latest
